[package]
name = "rust-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking"] }
regex = "1.10.2"
serde_derive = "1.0.193"
serde_json = "1.0.108"
serde_yaml = "0.8.7"
